app/src/main/java/com/example/mvvmclean/common/datalayer/remote/dto/error/UnknownError.java
package com.example.mvvmclean.common.datalayer.remote.dto.error;

public class UnknownError extends Throwable {
}
